--- a/templates/home.html
+++ b/templates/home.html
@@ -1,84 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>ML Calihouse</title>
-     <!-- Compiled and minified CSS -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-     <!-- Compiled and minified JavaScript -->
-     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-    <!-- font awesome -->
-    <script src="https://kit.fontawesome.com/4a822b1d6a.js"></script>
+PREDICTION MODEL
 </head>
 <body>
-    <div class="container" text-align = "center">
 
-    <h3>Roughness Prediction</h3>
-    <form 
-    action='http://localhost:5000/predictform'
-    method='POST'>
-        
-        <!-- row 1 -->
-        <div class='row'>
-            <!-- input medinc -->
-            <div class="input-field col s3">
-                <input class='validate' id='LT Layer Thickness' 
-                name='LT Layer Thickness' type='text'>
-                <label for='LT Layer Thickness'>LT Layer Thickness...</label>
-            </div>
-            <!-- input houseage -->
-            <div class="input-field col s3">
-                <input class='validate' id='AS2 Pressure' 
-                name='AS2 Pressure' type='text'>
-                <label for='AS2 Pressure'>AS2 Pressure...</label>
-            </div>
-            <!-- input averooms -->
-            <div class="input-field col s3">
-                <input class='validate' id='GT' 
-                name='GT' type='text'>
-                <label for='GT'>GT...</label>
-            </div>
-            <!-- input avebedrms -->
-            <div class="input-field col s3">
-                <input class='validate' id='AT' 
-                name='AT' type='text'>
-                <label for='AT'>AT...</label>
-            </div>
+    <h1> Prediction Model</h1>
+    <h2>Thanks for visiting our website for cross-validation of the model</h2>
+    <div class="row">
+        <form class="form-horizontal" name="data" action='http://localhost:5000/predictform'
+        method='POST' onsubmit="return terify();">
+          <div>1.Please choose the layer you want to grow:
+            <input type="radio" name="data1" id="data1" value="GaAs">GaAs layer
+            <input type="radio" name="data1" id="data1" value="AlAs"> AlAs layer
+            <input type="radio" name="data1" id="data1" value="AlGaAs ">AAlGaAs layer
+            <span class="hidalert"></span>
+          </div>
+          <div>2.Please select any intended thickness layer :
+            <input type="text" name="data2" id="data2" onchange="textemp(this);"> (nm)
+            <span class="hidalert"> .*Integer and except  0 and decimals!</span>
+          </div>
+          <div>3.Please select the LT layer thickness 
+            <select name="data3" id="data3" onchange="selectemp(this);"><option value="" style="display: none;" disabled="" selected="">please choose</option><option value="0">0 nm</option><option value="100">100 nm</option><option value="200">200 nm</option></select>
+            <span class="hidalert">*Please choose one!</span>
+          </div>
+          <div>4.Please select Arsenic Pressure 
+            <select name="data4" id="data4" onchange="selectemp(this);"><option value="" style="display: none;" disabled="" selected="">please choose</option><option value="3e-6">3e-6</option><option value="4.1e-6">4.1e-6</option><option value="6e-6">6e-6</option><option value="9e-6">9e-6</option><option value="1e-5">1e-5</option></select>
+            <span class="hidalert">*Please choose one!</span>
+          </div>
+          <div>5.Please choose the AT:
+            <select name="data5" id="data5" onchange="selectemp(this);"><option value="" style="display: none;" disabled="" selected="">please choose</option><option value="400">800</option><option value="600">750</option></select>
+            <span class="hidalert">*Please choose one!</span>
+          </div>
+          <div>6.Please select the GT:
+            <select name="data6" id="data6" onchange="selectemp(this);"><option value="" style="display: none;" disabled="" selected="">please choose</option><option value="650">650</option><option value="675">675</option><option value="700">700</option></select>
+            <span class="hidalert">*Please choose one!</span>
+          </div>
+          <div>7.Please select the Annealing time:
+            <select name="data7" id="data7" onchange="selectemp(this);"><option value="" style="display: none;" disabled="" selected="">please choose</option><option value="90">90 sec</option><option value="180">180 sec</option><option value="240">240 sec</option><option value="600">600 sec</option></select>
+            <span class="hidalert">*Please choose one!</span>
+          </div>
+          <div id="commit" class="commit">
+            <input type="submit" name="submit" id="submit" value="commit">
+      <!--button or html5's datalist-->
+          </div>
+        </form>
+        <div>Prediction Result:
+          <span id="result"></span>
         </div>
-        
-        <!-- row 2 -->
-        <div class='row'>
-            <!-- input population -->
-            <div class="input-field col s3">
-                <input class='validate' id='Annealing time' 
-                name='Annealing time' type='text'>
-                <label for='Annealing time'>Annealing time...</label>
-            </div>
-            <!-- input aveoccup -->
-            <div class="input-field col s3">
-                <input class='validate' id='Intended Thickness' 
-                name='Intended Thickness' type='text'>
-                <label for='Intended Thickness'>Intended Thickness..</label>
-            </div>
-     
-            </div>
-        </div>
-        
-        <!-- row 3 -->
-        <center class='row'>
-            <button class='btn waves-effect waves-light' 
-            type='submit'>
-                PREDICT
-                &nbsp;
-                <i class="fas fa-hat-wizard"></i>
-            </button>
-        </center>
-        
-    </form>
-
-    <div>The prediction is {{prediction_text}}</div>
+      </div>
+      <div>The prediction is {{prediction_text}}</div>
 
     </div>
 </body>
